<resources>
    <string name="app_name">Mida Pro</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="settings">Settings</string>
    <string name="carrier_image">Carrier Image</string>
    <string name="secret_file">Secret File</string>
    <string name="password">Password</string>
    <string name="password_hint">Min 8 chars: 1 Upper, 1 Lower, 1 Number</string>
    <string name="process">Process</string>
    <string name="success">Operation Successful!</string>
    <string name="error_password">Invalid Password Structure</string>
    <string name="select_carrier">Select Carrier Image</string>
    <string name="select_secret">Select Secret File</string>
</resources>